--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "license": "ISC",
   "devDependencies": {
     "page": "^1.7.1",
-    "speclate": "^3.3.0",
+    "speclate": "5.x.x",
     "superagent": "^1.8.3"
   }
 }
