--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "speclate-router",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-  },
+  "scripts": {},
   "author": "",
   "license": "ISC",
   "devDependencies": {
