moving from devDependencies to dependencies to that the packages will be available when included from a different project

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {},
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "page": "^1.7.1",
     "speclate": "5.x.x",
     "superagent": "^1.8.3"
