--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "speclate-router",
-  "version": "2.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {},
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "page": "^1.7.1",
-    "sizlate": "1.2.x",
-    "speclate": "5.x.x",
-    "superagent": "^1.8.3"
-  },
-  "bundledDependencies": [
-    "page",
-    "speclate",
-    "superagent"
-  ]
+    "name": "speclate-router",
+    "version": "2.1.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {},
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "page": "^1.7.1",
+        "sizlate": "1.2.x",
+        "speclate": "5.x.x",
+        "superagent": "^1.8.3"
+    },
+    "bundledDependencies": [
+        "page",
+        "sizlate",
+        "speclate",
+        "superagent"
+    ]
 }
