--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "speclate-router",
-  "version": "2.3.1",
-  "description": "",
-  "main": "index.js",
-  "scripts": {},
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "page": "1.x.x",
-    "sizlate": "1.x.x",
-    "speclate": "5.x.x",
-    "speclate-fetch": "1.x.x"
-  },
-  "bundledDependencies": [
-    "page",
-    "sizlate",
-    "speclate",
-    "superagent"
-  ]
+    "name": "speclate-router",
+    "version": "2.4.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {},
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "page": "1.x.x",
+        "sizlate": "1.x.x",
+        "speclate": "5.x.x",
+        "speclate-fetch": "1.x.x"
+    },
+    "bundledDependencies": [
+        "page",
+        "sizlate",
+        "speclate",
+        "speclate-fetch"
+    ]
 }
