--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "async": "2.x.x",
         "page": "1.x.x",
         "sizlate": "1.x.x",
-        "speclate": "6.x.x",
+        "speclate": "^6.2.4",
         "speclate-fetch": "1.x.x"
     },
     "bundledDependencies": [
