adding nightwatch tests

--- a/package.json
+++ b/package.json
@@ -1,34 +1,42 @@
 {
-    "name": "speclate-router",
-    "version": "4.0.2",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "standard"
-    },
-    "author": "",
-    "license": "MIT",
-    "dependencies": {
-        "async": "2.x.x",
-        "page": "1.x.x",
-        "sizlate": "1.x.x",
-        "speclate": "^7.1.0",
-        "speclate-fetch": "1.x.x"
-    },
-    "bundledDependencies": [
-        "async",
-        "page",
-        "sizlate",
-        "speclate",
-        "speclate-fetch"
-    ],
-    "devDependencies": {
-        "standard": "^8.0.0"
-    },
-    "standard": {
-        "globals": [
-            "$",
-            "fetch"
-        ]
-    }
+  "name": "speclate-router",
+  "version": "4.0.2",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test-setup": "npm run test-server",
+    "test": " npm run nightwatch && npm run lint",
+    "lint": "standard",
+    "test-build-client-side": "browserify tests/sample/client/router.js > tests/sample/client/router-compiled.js",
+    "test-server": "npm run test-build-client-side && cd tests/sample/ && speclate --all && speclate --debug 5004",
+    "nightwatch": "tests/e2e/nightwatch.js --config tests/e2e/nightwatch.json --test tests/e2e/spec.js"
+
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "async": "2.x.x",
+    "page": "1.x.x",
+    "sizlate": "1.x.x",
+    "speclate": "^7.1.0",
+    "speclate-fetch": "1.x.x"
+  },
+  "bundledDependencies": [
+    "async",
+    "page",
+    "sizlate",
+    "speclate",
+    "speclate-fetch"
+  ],
+  "devDependencies": {
+    "browserify": "^13.1.1",
+    "jquery": "^3.1.1",
+    "nightwatch": "^0.9.8"
+  },
+  "standard": {
+    "globals": [
+      "$",
+      "fetch"
+    ]
+  }
 }
