--- a/package.json
+++ b/package.json
@@ -1,34 +1,41 @@
 {
-    "name": "speclate-router",
-    "version": "4.0.2",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "standard"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "async": "2.x.x",
-        "page": "1.x.x",
-        "sizlate": "1.x.x",
-        "speclate": "^7.1.0",
-        "speclate-fetch": "1.x.x"
-    },
-    "bundledDependencies": [
-        "async",
-        "page",
-        "sizlate",
-        "speclate",
-        "speclate-fetch"
-    ],
-    "devDependencies": {
-        "standard": "^8.0.0"
-    },
-    "standard": {
-        "globals": [
-            "$",
-            "fetch"
-        ]
-    }
+  "name": "speclate-router",
+  "version": "4.0.2",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "npm run test-server && npm run nightwatch && npm run lint",
+    "lint": "standard",
+    "test-build-client-side": "browserify test/sample/client/router.js > test/sample/client/router-compiled.js",
+    "test-server": "npm run test-build-client-side && cd test/sample/ && speclate --all && speclate --debug 5004",
+    "nightwatch": "nightwatch --config nightwatch.conf.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "async": "2.x.x",
+    "page": "1.x.x",
+    "sizlate": "1.x.x",
+    "speclate": "^7.1.0",
+    "speclate-fetch": "1.x.x"
+  },
+  "bundledDependencies": [
+    "async",
+    "page",
+    "sizlate",
+    "speclate",
+    "speclate-fetch"
+  ],
+  "devDependencies": {
+    "jquery": "^3.1.1",
+    "nightwatch": "^0.9.8",
+    "selenium-download": "^2.0.7",
+    "standard": "^8.0.0"
+  },
+  "standard": {
+    "globals": [
+      "$",
+      "fetch"
+    ]
+  }
 }
