--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "speclate-fetch"
   ],
   "devDependencies": {
+    "browserify": "^13.1.1",
     "jquery": "^3.1.1",
     "nightwatch": "^0.9.8",
     "selenium-download": "^2.0.7",
