--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,7 @@ before_install:
   # set the xvfb screen size to 1280x1024x16
   - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
 
+
+before_script: chmod 0777 ./nightwach.js
 script: ./run_tests
 
