--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test-setup": "npm run test-server",
     "test": " npm run nightwatch && npm run lint",
     "lint": "standard",
-    "test-build-client-side": "browserify test/sample/client/router.js > test/sample/client/router-compiled.js",
-    "test-server": "npm run test-build-client-side && cd test/sample/ && speclate --all && speclate --debug 5004",
+    "test-build-client-side": "browserify tests/sample/client/router.js > tests/sample/client/router-compiled.js",
+    "test-server": "npm run test-build-client-side && cd tests/sample/ && speclate --all && speclate --debug 5004",
     "nightwatch": "node ./nightwatch.js"
   },
   "author": "",
