--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "test": "standard"
     },
     "author": "",
-    "license": "ISC",
+    "license": "MIT",
     "dependencies": {
         "async": "2.x.x",
         "page": "1.x.x",
