--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
 
 before_script:
   - chmod 0777 ./tests/e2e/nightwatch.js
-  - npm run test-server &
+  - npm run test-serve
   - "sleep 5"
 
 script: npm run test
