--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: node_js
-
+sudo: required
 node_js:
   - "6"
 
@@ -12,7 +12,7 @@ before_install:
 
 before_script:
   - chmod 0777 ./tests/e2e/nightwatch.js
-  - npm i speclate-cli@1.4.2
+  - cd node_modules/speclate && npm i speclate-cli@1.4.2 && cd ../../
   - npm run test-server &
   - "sleep 10"
 
