--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
 
 before_script:
   - chmod 0777 ./tests/e2e/nightwatch.js
-  - cd node_modules/speclate && npm i speclate-cli@1.4.2
+  - cd node_modules/speclate && npm i speclate-cli@1.4.2 && cd ../../
   - npm run test-server &
   - "sleep 10"
 
