--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "test-build-client-side": "./node_modules/browserify/bin/cmd.js tests/sample/client/router.js > tests/sample/client/router-compiled.js",
     "test-server": "npm run test-build-client-side && cd tests/sample/ && pwd && ls ./docs && speclate --all && speclate --debug 5004",
     "nightwatch": "tests/e2e/nightwatch.js --config tests/e2e/nightwatch.json --test tests/e2e/spec.js"
-
   },
   "author": "",
   "license": "ISC",
@@ -31,7 +30,8 @@
   "devDependencies": {
     "browserify": "^13.1.1",
     "jquery": "^3.1.1",
-    "nightwatch": "^0.9.8"
+    "nightwatch": "^0.9.8",
+    "standard": "^8.6.0"
   },
   "standard": {
     "globals": [
