ignore tests reports

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test-setup": "npm run test-server",
-        "test": " npm run test-setup & npm run nightwatch && npm run lint",
+        "test": "npm run nightwatch && npm run lint",
         "lint": "standard",
         "test-build-client-side": "./node_modules/browserify/bin/cmd.js tests/sample/client/router.js > tests/sample/client/router-compiled.js",
         "test-server": "npm run test-build-client-side && cd tests/sample/ && speclate --all && speclate --debug 5004",
