--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
+test-reports
 node_modules
 npm-debug.log
 dist
 selenium-debug.log
 tests/sample/client/router-compiled.js
 tests/sample/docs
-test-reports/
