--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "browserify": "^14.1.0",
     "jquery": "^3.1.1",
     "nightwatch": "^0.9.8",
-    "standard": "^8.6.0"
+    "standard": "10.x.x"
   },
   "standard": {
     "globals": [
