--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "speclate-fetch": "2.x.x"
   },
   "devDependencies": {
-    "browserify": "^14.1.0",
-    "jquery": "^3.1.1",
-    "nightwatch": "^0.9.8",
+    "browserify": "14.x.x",
+    "jquery": "3.x.x",
+    "nightwatch": "0.x.x",
     "standard": "10.x.x"
   },
   "standard": {
