adding sepc from route with tests

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test-setup": "npm run test-server",
     "test": "npm run nightwatch && npm run lint",
+    "unit": "jasmine",
     "lint": "standard",
     "test-build-client-side": "./node_modules/browserify/bin/cmd.js tests/sample/client/router.js > tests/sample/client/router-compiled.js",
     "test-server": "npm run test-build-client-side && cd tests/sample/ && speclate --build && speclate --dev 5004",
@@ -29,7 +30,17 @@
   "standard": {
     "globals": [
       "$",
-      "fetch"
+      "fetch",
+      "describe",
+      "before",
+      "beforeEach",
+      "expect",
+      "it"
+    ],
+    "ignore": [
+      "client",
+      "testRunner",
+      "test"
     ]
   }
 }
