--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "standard",
     "test-build-client-side": "./node_modules/browserify/bin/cmd.js tests/sample/client/router.js > tests/sample/client/router-compiled.js",
     "test-server": "npm run test-build-client-side && cd tests/sample/ && speclate --build && speclate --dev 5004",
-    "nightwatch": "tests/e2e/nightwatch.js --config tests/e2e/nightwatch.json --test tests/e2e/spec.js"
+    "nightwatch": "tests/e2e/nightwatch.js --config tests/e2e/nightwatch.json"
   },
   "author": "",
   "license": "ISC",
