use latest nightwatch

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "browserify": "14.x.x",
     "jasmine": "^2.9.0",
     "jquery": "3.x.x",
-    "nightwatch": "0.x.x",
+    "nightwatch": "x.x.x",
     "standard": "10.x.x"
   },
   "standard": {
