--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ after_install:
 before_script:
   - chmod 0777 ./tests/e2e/nightwatch.js
   - mkdir ./tests/sample/docs
-  - selenium-server
+  - npm run test-server &
   - "sleep 10"
 
 
