--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,5 @@
 language: node_js
-node_js:
-  - "6"
+ node_js: "stable"
 
-before_install:
-  # fire up xvfb on port :99.0
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  # set the xvfb screen size to 1280x1024x16
-  - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
-
-after_install:
-  - npm ls speclate-cli
-before_script:
-  - chmod 0777 ./tests/e2e/nightwatch.js
-  - mkdir ./tests/sample/docs
-  - npm run test-server &
-  - "sleep 100"
-
-
-script:
-  - npm run test
-
+ before_install:
+    - stty cols 80
