--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,6 @@ addons:
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
+  - npm run test-server
   - sleep 3
   - fluxbox >/dev/null 2>&1 &
