--- a/package.json
+++ b/package.json
@@ -17,16 +17,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.6.2",
     "async.parallel": "0.5.2",
     "sizlate": "2.x.x",
-    "speclate": "17.x.x",
+    "speclate": "18.x.x",
     "speclate-fetch": "2.x.x",
     "testcafe": "^0.18.6"
   },
   "devDependencies": {
     "browserify": "^15.0.0",
     "jasmine": "^2.9.0",
-    "jquery": "3.x.x",
+    "jquery": "3.4.x",
     "nightwatch": "x.x.x",
     "standard": "10.x.x"
   },
