--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "unit": "jasmine",
     "lint": "standard",
     "test-build-client-side": "./node_modules/browserify/bin/cmd.js tests/sample/client/router.js > tests/sample/client/router-compiled.js",
-    "test-server": "npm run test-build-client-side && cd tests/sample/ && speclate --build && speclate --dev 5004",
+    "test-server": "npm run test-build-client-side && cd tests/sample/ && ../../../speclate/bin/speclate.js --build && ../../../speclate/bin/speclate.js --dev 5004",
     "nightwatch": "tests/e2e/nightwatch.js --config tests/e2e/nightwatch.json",
     "testcafe": "./node_modules/.bin/testcafe chrome tests/testcafe/index-test.js",
     "testcafe-all": "./node_modules/.bin/testcafe chrome,firefox tests/testcafe/index-test.js"
@@ -17,19 +17,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "async": "^2.6.2",
     "async.parallel": "0.5.2",
     "sizlate": "2.x.x",
-    "speclate": "18.x.x",
-    "speclate-fetch": "2.x.x",
-    "testcafe": "^0.18.6"
+    "speclate-fetch": "2.x.x"
   },
   "devDependencies": {
+
+    "testcafe": "^0.18.6",
     "browserify": "^15.0.0",
     "jasmine": "^2.9.0",
     "jquery": "3.4.x",
     "nightwatch": "x.x.x",
-    "standard": "10.x.x"
+    "standard": "10.x.x" 
   },
   "standard": {
     "globals": [
